# aws-strands-agentcore

./: .gitignore  README.md  agent_runner.py  bedrock_agentcore_template.yaml  env_template  requirements.txt  travel_agent.py
okahu_agentcore_demo/: pyproject.toml
okahu_agentcore_demo/src/okahu_agentcore_demo/: __main__.py  demo_setup.py
okahu_agentcore_demo_setup/: pyproject.toml
okahu_agentcore_demo_setup/src/okahu_agentcore_demo_setup/: __main__.py  okahu_api.py
tests/: test_travel_agent.py
travel_agent/: aws_agentcore_client_app.py  requirements.txt  travel_agent.py
travel_agent/tests/: requirements.txt  test_travel_agent.py
