[build-system]
requires = ["hatchling","hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "okahu_agentcore_demo_setup"
version = "0.1.0"
description = "Demo setup utilities for Okahu Strands AgentCore"
requires-python = ">=3.11"
dependencies = [
    "requests"
]
[tool.hatch.build.targets.wheel]
packages = ["src/okahu_agentcore_demo_setup"]

[project.scripts]
okahu_agentcore_demo_setup = "okahu_agentcore_demo_setup.__main__:main"